# cex-watch-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-snapshot.yml  tests.yml
data/: latest.json
data/fees/: 2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  (+43 more)
data/listings/: 2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  (+50 more)
docs/: adding-new-exchange.md
examples/: claude-desktop-config.json  prompts.md
tests/: test_smoke.py
(+93 files in other folders)
