[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cex-watch-mcp"
version = "0.1.0"
description = "Open-source MCP server for monitoring centralized crypto exchanges. No backend SaaS, no API token, all sources public."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zane", email = "zane@cex101.com" },
]
keywords = ["mcp", "crypto", "exchange", "binance", "okx", "bybit", "coinbase", "kraken"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
cex-watch-mcp = "cex_watch_mcp.server:main"
cex-watch-snapshot = "cex_watch_mcp.snapshot:main"

[project.urls]
Homepage = "https://github.com/zanecex101/cex-watch-mcp"
Issues = "https://github.com/zanecex101/cex-watch-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cex_watch_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
